Fix tag pills overflowing their article card

--- a/css/_3-modules/article.scss
+++ b/css/_3-modules/article.scss
@@ -39,6 +39,7 @@
 
 .article-tags__box {
   display: flex;
+  flex-wrap: wrap;
   margin-bottom: 8px;
 
   .article__tag {
